--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
@@ -657,7 +656,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
 
-                                        <!-- Sort orders -->
+                                    <!-- Sort orders -->
                                     <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
                                         <div class="products_dropdown product_dropdown_sorting">
                                             <div class="isotope_sorting_text"><span>Sort</span><i
@@ -973,7 +972,7 @@
                     </div>
                 </div>
             </section>
-            <span th:if="${similarProducts.size()>0}">
+            <span th:unless="${similarProducts == null}">
             <!--================End Product Description Area =================-->
 
             <div class="products" style="padding-top: 0">
@@ -991,8 +990,7 @@
                             <div class="product">
                                 <div class="product_image_showcase"><a
                                         th:href="@{'/product/' + ${similarProduct.productId}}"><img
-                                        th:src="@{/static/images/hayvan_ciftligi.jpg}" alt=""
-                                        class="product_image_img"></a></div>
+                                        th:src="|data:image/png;base64,${similarProduct.getEncodedCoverImage()}|"/></a></div>
                                 <div class="product_content">
                                     <div class="product_info align-items-center justify-content-center">
                                         <div style="text-align:center;">
@@ -1089,7 +1087,7 @@
                                             </div>
                                             <div title="Compare products"
                                                  class=" compare our_picks_product_button product_button product_cart text-center d-flex flex-column align-items-center justify-content-center"
-                                                 name="compare" th:id="${similarProduct.getProductId()}" type="button" >
+                                                 name="compare" th:id="${similarProduct.getProductId()}" type="button">
 
                                                 <div>
                                                     <div><img th:src="@{/static/images/compare.svg}" class="svg" alt="">
@@ -1366,7 +1364,7 @@
     $('.compare').click(function (event) {
         var id = $(this).attr("id");
 
-        window.location.href="/compare/" + productID + "/" + id ;
+        window.location.href = "/compare/" + productID + "/" + id;
 
     });
 
