delete button title added

--- a/src/main/resources/templates/product_details/_information.html
+++ b/src/main/resources/templates/product_details/_information.html
@@ -31,6 +31,7 @@
                                     class="trans_200 fa product_text"
                                     id="delete_product"
                                     style="font-size: 25px; color: #4a4a4a"
+                                    title="Delete this product"
                                     data-toggle="collapse">
                                 &#xf014;
                             </button>
