--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -185,7 +185,7 @@
                                     Short Description
                                 </div>
                                 <input type="text" id="book_short_description_input"
-                                       class="checkout_input form-control" maxlength="255"
+                                       class="checkout_input form-control" maxlength="1000"
                                        placeholder="Short Description" required="required">
                             </div>
                         </div>
@@ -194,8 +194,8 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <textarea type="text" id="book_long_description_input" maxlength="255"
-                                          class="long_desc_textarea form-control different-control w-100" rows="3"
+                                <textarea type="text" id="book_long_description_input" maxlength="5000"
+                                          class="long_desc_textarea form-control different-control w-100" rows="5"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -1648,6 +1648,23 @@
 </span>
 
 <script>
+
+    $(document).ready(function () {
+        var i;
+        var text_inputs = document.querySelectorAll("input[type=text]");
+        var number_inputs = document.querySelectorAll("input[type=number]");
+        const TEXT_MAX_LENGTH = "255";
+        const NUMBER_MAX_LENGTH = 2147483647;
+
+        for (i = 0; i < text_inputs.length; i++) {
+            text_inputs[i].setAttribute("maxlength", TEXT_MAX_LENGTH)
+        }
+
+        for (i = 0; i < number_inputs.length; i++) {
+            number_inputs[i].setAttribute("max", NUMBER_MAX_LENGTH)
+        }
+    });
+
     // var token = $("meta[name='_csrf']").attr("content");
     // var header = $("meta[name='_csrf_header']").attr("content");
 
