--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -184,9 +184,9 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
-                                <input type="text" id="book_short_description_input"
-                                       class="checkout_input form-control" maxlength="1000"
-                                       placeholder="Short Description" required="required">
+                                <textarea type="text" id="book_short_description_input"
+                                          class="long_desc_textarea form-control different-control w-100" rows="4"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -195,7 +195,7 @@
                                     Long Description
                                 </div>
                                 <textarea type="text" id="book_long_description_input" maxlength="5000"
-                                          class="long_desc_textarea form-control different-control w-100" rows="5"
+                                          class="long_desc_textarea form-control different-control w-100" rows="6"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -436,9 +436,9 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
-                                <input type="text" id="ebook_short_description_input"
-                                       class="checkout_input form-control" maxlength="255"
-                                       placeholder="Short Description" required="required">
+                                <textarea type="text" id="ebook_short_description_input"
+                                          class="long_desc_textarea form-control different-control w-100" rows="4"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -446,8 +446,8 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <textarea type="text" id="ebook_long_description_input" maxlength="255"
-                                          class="long_desc_textarea form-control different-control w-100" rows="3"
+                                <textarea type="text" id="ebook_long_description_input" maxlength="5000"
+                                          class="long_desc_textarea form-control different-control w-100" rows="6"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -650,9 +650,9 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
-                                <input type="text" id="audiobook_short_description_input"
-                                       class="checkout_input form-control" maxlength="255"
-                                       placeholder="Short Description" required="required">
+                                <textarea type="text" id="audiobook_short_description_input"
+                                          class="long_desc_textarea form-control different-control w-100" rows="4"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -660,8 +660,8 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <textarea type="text" id="audiobook_long_description_input" maxlength="255"
-                                          class="long_desc_textarea form-control different-control w-100" rows="3"
+                                <textarea type="text" id="audiobook_long_description_input" maxlength="5000"
+                                          class="long_desc_textarea form-control different-control w-100" rows="6"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -783,10 +783,9 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
-
-                                <input type="text" id="ebook_reader_short_description_input"
-                                       class="checkout_input form-control" maxlength="255"
-                                       placeholder="Short Description" required="required">
+                                <textarea type="text" id="ebook_reader_short_description_input"
+                                          class="long_desc_textarea form-control different-control w-100" rows="4"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -794,8 +793,8 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <textarea type="text" id="ebook_reader_long_description_input" maxlength="255"
-                                          class="long_desc_textarea form-control different-control w-100" rows="3"
+                                <textarea type="text" id="ebook_reader_long_description_input" maxlength="5000"
+                                          class="long_desc_textarea form-control different-control w-100" rows="6"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -1119,10 +1118,9 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
-                                <input type="text"
-                                       id="ebook_reader_case_short_description_input"
-                                       class="checkout_input form-control" maxlength="255"
-                                       placeholder="Short Description" required="required">
+                                <textarea type="text" id="ebook_reader_case_short_description_input"
+                                          class="long_desc_textarea form-control different-control w-100" rows="4"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -1130,8 +1128,8 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <textarea type="text" id="ebook_reader_case_long_description_input" maxlength="255"
-                                          class="long_desc_textarea form-control different-control w-100" rows="3"
+                                <textarea type="text" id="ebook_reader_case_long_description_input" maxlength="5000"
+                                          class="long_desc_textarea form-control different-control w-100" rows="6"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -1296,9 +1294,9 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
-                                <input type="text" id="book_case_short_description_input"
-                                       class="checkout_input form-control" maxlength="255"
-                                       placeholder="Short Description" required="required">
+                                <textarea type="text" id="book_case_short_description_input"
+                                          class="long_desc_textarea form-control different-control w-100" rows="4"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -1306,8 +1304,8 @@
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <textarea type="text" id="book_case_long_description_input" maxlength="255"
-                                          class="long_desc_textarea form-control different-control w-100" rows="3"
+                                <textarea type="text" id="book_case_long_description_input" maxlength="5000"
+                                          class="long_desc_textarea form-control different-control w-100" rows="6"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -1651,8 +1649,15 @@
 
     $(document).ready(function () {
         var i;
+        const short_desc_ids = ['book_short_description_input', 'ebook_short_description_input',
+            'audiobook_short_description_input', 'ebook_reader_short_description_input',
+            'ebook_reader_case_short_description_input', 'book_case_short_description_input'];
+        const long_desc_ids = ['book_long_description_input', 'ebook_long_description_input',
+            'audiobook_long_description_input', 'ebook_reader_long_description_input',
+            'ebook_reader_case_long_description_input', 'book_case_long_description_input'];
         var text_inputs = document.querySelectorAll("input[type=text]");
         var number_inputs = document.querySelectorAll("input[type=number]");
+        var textarea_inputs = document.querySelectorAll("textarea[type=text]");
         const TEXT_MAX_LENGTH = "255";
         const NUMBER_MAX_LENGTH = 2147483647;
 
@@ -1662,6 +1667,18 @@
 
         for (i = 0; i < number_inputs.length; i++) {
             number_inputs[i].setAttribute("max", NUMBER_MAX_LENGTH)
+        }
+
+        for (i = 0; i < textarea_inputs.length; i++) {
+            if (short_desc_ids.includes(textarea_inputs[i].id)) {
+                textarea_inputs[i].setAttribute("maxlength", 1000);
+
+            } else if (long_desc_ids.includes(textarea_inputs[i].id)) {
+                textarea_inputs[i].setAttribute("maxlength", 5000);
+
+            } else {
+                textarea_inputs[i].setAttribute("maxlength", TEXT_MAX_LENGTH)
+            }
         }
     });
 
